--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "chart.js": "^4.4.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-filter": "^1.3.3",
-    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
