--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "sass": "^1.75.0",
+    "simple-peer": "^9.11.1",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
